# bucketstack

./: .gitignore  App.tsx  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  entitlements.plist  index.css  index.html  index.tsx  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  types.ts  vite.config.ts
.github/workflows/: release-build.yml
bucketstack-site/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts  vite.config.ts
bucketstack-site/components/: AppWindow.tsx  Button.tsx  DemoModals.tsx  DemoTrayWindow.tsx  DemoViews.tsx  InteractiveFileManager.tsx  MockAppView.tsx  ProviderIcon.tsx  SEO.tsx  Section.tsx
bucketstack-site/data/: APP_FEATURES.md  FEAT.md  FEATURES.md  README.md
bucketstack-site/public/: llms.txt  robots.txt  sitemap.xml
bucketstack-site/services/: releaseService.ts
capabilities/: main.json
components/: AboutModal.tsx  AccountModal.tsx  ActivityLog.tsx  AddConnectionModal.tsx  BackgroundSync.tsx  Button.tsx  ErrorBoundary.tsx  FileEditorModal.tsx  FileExplorer.tsx  LinkExpiryModal.tsx  MonacoFilePreview.tsx  MoveToModal.tsx  MultiBucketModal.tsx  Sidebar.tsx  StorageAnalytics.tsx  SyncManager.tsx  TermsModal.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TipCarousel.tsx  TransferModal.tsx  TransferProgressPanel.tsx  TrayWindow.tsx  UploadConflictModal.tsx
hooks/: useMenuBar.ts
icons/: icon.icns
permissions/: default.toml
scripts/: build.sh  notarize.sh
services/: activityService.ts  s3Service.ts  secureStorage.ts  versionService.ts
src/: main.rs  security.rs
