[package]
name = "BucketStack"
version = "1.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-positioner = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
aws-config = "1.1"
aws-sdk-s3 = "1.9"
zip = "0.6"
urlencoding = "2.1.3"
walkdir = "2.4"
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
once_cell = "1.19"
dirs = "5.0"
aes-gcm = "0.10.3"
machine-uid = "0.5.4"
sha2 = "0.10.9"
rand = "0.10.0"
hex = "0.4.3"
directories = "6.0.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
